[package]
name = "capsule-pow"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
rand = { version = "0.8", features = ["small_rng"] }
sha2 = "0.10.2"
rug = "1.14.1"
blake3 = "1.3.1"

# Substrate packages
sc-consensus-pow = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sp-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sp-consensus-pow = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sp-core = { version = "5.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sp-runtime = { version = "5.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.17" }
sc-client-api = {version = "4.0.0-dev",  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
sp-application-crypto = {version = "5.0.0",  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }

# local packages
cp-constants = { path = "../../primitives/constants"}
# Capsule packages
elgamal_capsule = {version = "0.1.2", git = "https://github.com/NexTokenTech/elgamal_capsule.git", branch = "master"}

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "pollard_rho_benchmark"
harness = false
