[package]
name = "trex-pow"
version = "0.1.0"
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0" }
rand = { version = "0.8", features = ["small_rng"] }
rug = "1.14.1"
blake3 = "1.3.1"

# Substrate packages
sc-consensus-pow = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }
sp-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }
sp-consensus-pow = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }
sp-core = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }
sp-runtime = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }
sc-client-api = {version = "4.0.0-dev",  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-application-crypto = {version = "6.0.0",  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

# local packages
trex-constants = { path = "../../primitives/constants"}
# Capsule packages
elgamal_capsule = {version = "0.1.3", git = "https://github.com/NexTokenTech/elgamal_capsule.git", branch = "master"}

[dev-dependencies]
sha2 = "0.10.2"
criterion = "0.3"

[[bench]]
name = "pollard_rho_benchmark"
harness = false
