[package]
name = "pallet-rewards"
version = "0.10.0-dev"
description = "FRAME pallet for Trex runtime rewards."
authors = ["NexToken Technologies - Trex Dev Team <team@trex.ink>"]
homepage = "https://trex.ink"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/NexTokenTech/Trex"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
sp-runtime = { version = "6.0.0",default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }
sp-std = { version = "4.0.0-dev",default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }
sp-inherents = { version = "4.0.0-dev",default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }
sp-consensus-pow = { version = "0.10.0-dev",default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }
frame-support = { version = "4.0.0-dev",default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }
frame-system = { version = "4.0.0-dev",default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }
serde = { version = "1.0", default-features = false,features = ["derive"] }
serde_json = { version = "1.0",features = ["arbitrary_precision"] }
trex-constants = { path = "../../primitives/constants"}

# Benchmarking
frame-benchmarking = { version = "4.0.0-dev",default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24", optional = true }

[dev-dependencies]
sp-core = { version = "6.0.0", default-features = false,git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24"}
sp-io = { version = "6.0.0", default-features = false,git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }
pallet-balances = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24"}

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-inherents/std",
	"sp-consensus-pow/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"sp-io/std",
	"sp-core/std",
	"serde_json/std",
	"frame-benchmarking/std"
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
]