[package]
# capsule primitives for runtime
name = "cp-runtime"
version = "0.1.0"
authors = ["Capsule Dev Team <team@timecaps.net>"]
edition = "2021"
license = "Apache-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.126", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
parity-util-mem = { version = "0.10.2", default-features = false, features = ["primitive-types"] }
log = { version = "0.4.14", default-features = false }
sp-core = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
sp-std = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
sp-runtime = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }
sp-io = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", tag = "devhub/latest" }

[dev-dependencies]
serde_json = "1.0.71"

[features]
bench = []
runtime-benchmarks = []
default = ["std"]
std = [
    "serde",
    "codec/std",
    "scale-info/std",
    "parity-util-mem/std",
    "log/std",
    "sp-core/std",
    "sp-std/std",
    "sp-runtime/std",
    "sp-io/std",
]
