[package]
name = "pallet-difficulty-rpc"
version = "4.0.0-dev"
description = "A pallet that demonstrates simple RPC for summing numbers"
authors = ["NexToken Technologies - Trex Dev Team <team@trex.ink>"]
homepage = "https://trex.ink"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/NexTokenTech/Trex"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
  "derive",
]}
jsonrpsee = { version = "0.13.0", features = ["server", "macros"] }
serde = { version = "1.0", features = ["derive"], optional = true }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

# Substrate packages

sp-api = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24"  }
sp-blockchain = { default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }
sp-rpc = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }
sp-runtime = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.24" }

# local packages

pallet-difficulty-runtime-api = { version = "4.0.0-dev", path = "./runtime-api", default-features = false }

[features]
default = ["std"]
std = [
  "serde",
  "sp-api/std",
  "sp-runtime/std",
  "pallet-difficulty-runtime-api/std"
]
